# ghcjs-demos

./: README.md
hello4/: hello4.cabal  stack.yaml
hello4/src/: Main.hs
lu/: lu.cabal
lu/src/: Main.hs
physics/: physics.cabal
physics/src/: Main.hs
