name:                hello4
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hello
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       deepseq -any, lens -any,
--                       containers -any, random -any,
--                       template-haskell -any, blaze-html -any, filepath -any,
--                       hamlet -any, text -any, blaze-markup -any, shakespeare -any,
--                       ghcjs-dom -any, sodium -any, webkit-sodium -any,
--                       jsaddle -any
                       base -any, mtl -any, ghcjs-dom-jsffi -any
